pxc/tests/test_195_header/header3.px

function void func1(foo mutable& x, foo mutable& y)
{
  const t = x;
  y = x;
  x = t;
}

function void test1(foo mutable& x)
{
  int y = 20;
  func1(x, y);
}

{
  int x = 10;
  test1(x);
  thread_io().stdout().println(x);
  xy; // error
}

